@@ -1,3 +1,11 @@
+2007-06-15  Miguel Sofer  <msofer@users.sf.net>
+
+	* generic/trace.test: added tests 36.* for dynamic trace creation
+	and addition. These tests expose a change in dynamics due to a
+	recent round of optimisations. The "correct" behaviour is not
+	described in docs nor TIP 62. Currently test 36.2 fails, the opts
+	will be rolled back.
+
 2007-06-14  Miguel Sofer  <msofer@users.sf.net>
 
 	* generic/tclInt.decls:   Modif to the internals of TclObjInterpProc
